# sae2

./: .gitignore  DECODER_IMPLEMENTATION.md  PROJECT_COMPLETION.md  README.md  RPC_ANALYSIS.md  backup-project.ps1  package-lock.json  package.json  test-decoders.js  tsconfig.json
public/: app.js  config.json  index.html  rpc-pool copy.json  rpc-pool-optimized.json  rpc-pool.json  stream-tester.html  styles.css
rust_decoder/: Cargo.toml
rust_decoder/src/: main.rs
scripts/: unify-tx-cache.js
src/: index.ts
src/decoders/: README.md  crafting-decoder.js  crafting-decoder.ts  rust-normalizer.js  rust-normalizer.ts  rust-wrapper.js  rust-wrapper.ts  sage-crafting-decoder.js  sage-crafting-decoder.ts  test-integration.js  test-universal-decoder.js  universal-decoder.js  universal-decoder.ts
src/examples/: 01-game.js  01-game.ts  02-profile.js  02-profile.ts  03-fleets.js  03-fleets.ts  04-planets.js  04-planets.ts  05-compose-fleet.js  05-compose-fleet.ts  account-transactions.js  account-transactions.ts  fleet-transactions.js  fleet-transactions.ts  inspect-transaction.js  inspect-transaction.ts  material-mints.js  material-mints.ts  op-map.js  op-map.ts  test-batched-accounts.js  test-batched-accounts.ts  test-decoders.js  types.js  (+10 more)
tools/: batch-tx-details.js  capture-sse.cjs  capture-sse.js  get-profile-owner.js  inspect-sample-txs.js  inspect-tx.js  log-normalizer.js  optimize-rpc.ps1  parse_sse.js  post_fleets.js  save_sse.js  save_sse_profile.js  scan-fee-payer-rented.js  scan-rust-decodes.js  test-all-endpoints.js  test-normalize.js  test-rpc-performance.js
(+31 files in other folders)
