[package]
name = "carbon_crafting_decoder_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
carbon-crafting-decoder = { path = "./../star-atlas-decoders-main/carbon-decoders/crafting-decoder" }
carbon-sage-starbased-decoder = { path = "./../star-atlas-decoders-main/carbon-decoders/sage-starbased-decoder" }
carbon-sage-holosim-decoder = { path = "./../star-atlas-decoders-main/carbon-decoders/sage-holosim-decoder" }
solana-account = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
carbon-core = "0.10.0"
solana-pubkey = { version = "2.4.0", features = ["borsh", "serde", "bytemuck"] }
solana-instruction = "2.3.3"

[profile.release]
strip = "debuginfo"
